assets/css/custom.css
/* ... */
/*@media only screen and (max-width:920px) {*/
@media only screen and (min-width:320px) and (max-width:767px) {

    .transaction-pmt li.nav-item {
         margin: 2px 5px 5px 7px;
        width: 46%;
    }

    .transaction-pmt .nav-link {
        margin:10px 5px 2px 0px;
        width: 95%;
    }

    .transaction-pmt .nav-pills .nav-link.active {
     
        margin: 10px 5px 2px 0px;
    }
}


@media only screen and (min-width:768px) and (max-width:920px) {

    .transaction-pmt li.nav-item {
        margin: 2px 5px 10px 15px;
        width: 30%;
    }

    .transaction-pmt .nav-link {
        margin:10px 5px 2px 0px;
        width: 95%;
    }

    .transaction-pmt .nav-pills .nav-link.active {
     
        margin: 15px 5px 2px 0px;
    }


   
}



@media only screen and (min-width:921px) and (max-width:1280px) {

    .transaction-pmt .nav-link {
        margin: 10px 5px 2px 0px;
        width:auto;
    }

    .transaction-pmt li.nav-item {
        margin: 2px 12px 15px 0px;
        width:auto;
    }

    .transaction-pmt .nav-pills .nav-link.active {
     
        margin: 10px 15px 2px 0px;
    }

}


@media only screen and (min-width:768px) and (max-width:1199px) {

 .or-box h1 {
        font-size: 7rem;
        text-align: center;
        font-weight: bold;
        line-height: 52%;
        color: #010101;
        vertical-align: middle;
        width: auto;
        margin: auto;

    }
}



@media only screen and (min-width:1024px) and (max-width:1920px) {
    
.competitive-rates-section {
    background-color: #fb852d;
    padding: 10px 10px;
    width: 100%;
    bottom: 0px;
    left: 0px;
    position: fixed !important;
    margin: 0px;
}


    .rate-tab-rsr {
        line-height: 30px;
        border-left: 0px;
        border-right: 0px;
    }

    .rate-tab-tc {
        line-height:55px;
    }

    #footer {
    position:relative;
    bottom: 0;
    left: 0;
    width: 100%;
    margin-top:auto;
}

}

/*@media only screen and (min-width:430px) and (max-width:840px) {

    #footer {
        position:relative;
     
    }

}*/


@media only screen and (min-width:768px) and (max-width: 992px) {

   .rate-tab-rsr {
        border-left: 0px;
        border-right: 0px;
    }

}


@media only screen and (min-width:768px) and (max-width:799px) {

    .competitive-rates-section {
        position:absolute;
    }
}


@media only screen and (min-width:768px) and (max-width:840px) {

    .or-box {
        padding: 15px 0px;
        /* border: 1px solid #dddddd; */
        min-height: 95px;
    }

    .tpmt-3 {
        margin-top:10px;
    }

}




@media only screen and (min-width: 1280px) {


    .rate-tab-ce {
       /* line-height:33px;*/
        font-size: 22px;
    }

    /*.pmt {
        margin-top:5% !important
    }*/


    .or-box h1 {
       
        font-size: 7rem;
        margin: -25px auto auto auto;
    }

    .transaction-pmt .nav-pills .nav-link.active {
    
        margin: 2px 35px 2px 0px;
    }

   .transaction-pmt .nav-link {
        min-width: 147px;
        margin: 2px 38px 2px 0px;
   }

   .transaction-box {
        padding:0px;
        margin:0 auto 0;
    /* background-color: #dddddd; */
        position: relative;
        /*border-bottom:1px solid #000000;
        height:200px;*/
    }

    .next-btn {
        background-color: #548235;
        text-align: center;
        color: #ffffff;
        font-weight: bold;
        font-size: 17px;
        float: right;
        display: block;
        padding: 10px 30px;
        margin: 10px -47px 0px 0px !important;
        clear: both;
    }

}
/* ... */

